k8s/demoapp/go-test-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-test-2
  namespace: default
  labels:
    app: go-test-2
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: go-test-2
  template:
    metadata:
      labels:
        app: go-test-2
    spec:
      containers:
      - name: go-test-2
        image: demoapp:v1
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 35
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 35
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
        - name: timezone
          mountPath: /etc/localtime
      volumes:
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai

---

apiVersion: v1
kind: Service
metadata:
  name: go-test-2-svc
  namespace: default
spec:
  ports:
    - nodePort: 30101
      port: 8081
      protocol: TCP
      targetPort: 8080
  type: NodePort
  selector:
    app: go-test-2
