k8s/demoapp/go-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-test
  labels:
    app: go-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-test
  template:
    metadata:
      labels:
        app: go-test
    spec:
      containers:
      - name: go-test
        image: demoapp:v1
        ports:
        - containerPort: 8080
        resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
     

---

apiVersion: v1
kind: Service
metadata:
  name: go-test-svc
spec:
  ports:
    - name: http5
      nodePort: 30100
      port: 80
      protocol: TCP
      targetPort: 8080
  type: NodePort
  selector:
    app: go-test
